2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.164.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GType.xs:  Defer the instantiation of a newly-registered
	object class's class until after we've parsed the list of
	signals, properties, and interfaces to add to it.  This
	allows perl-derived GObjects to override GInterfaces that
	are implemented by parent classes.  Previously, the early
	instantiation confused GLib and caused the call to
	g_type_class_add_interface() to complain that the given type
	already conforms to the interface, because the type system
	considered the initialization of the class to be complete.

	Note that we do not currently have a way of chaining up to
	a parent's GInterface implementation, as can be done in C
	via g_type_interface_peek_parent().  Black magic may be
	required for that.

	* GObject.xs:  Load GInterface types immediately, instead of
	leaving them for lazy loading.  Otherwise, it is possible to
	get into situations in which a GInterface has not triggered
	its lazy loading by the time it is needed.

	* ParseXSDoc.pm (parse_file): When parsing an #else pre-processor
	directive, make sure we have actually seen and parsed a
	corresponding #if before trying to negate its entry.  This can
	happen when our parsing heurestics fail.  The result was an
	exception: "Modification of non-creatable array value attempted."

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.163.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GObject.xs (class_info_finish_loading): When handling a class'
	@ISA, instead of simple av_fetch calls and a final av_clear, use
	repeated av_shift calls.  Invoking av_clear on an @ISA array seems
	to break the caching magic associated with it when running under
	perl 5.10.0.  This in turn breaks our lazy-loading scheme.
